# multi-file-projects

./: README.md  game-life.cpp
calculator/: CMakeLists.txt  README.md  main.cpp
calculator/src/: .gitignore  ArithmeticProgression.cpp  ArithmeticProgression.h  BasedMath.cpp  BasedMath.h  CMakeLists.txt  Equation.h  Equations.cpp  Equations.h  Fun.h  Text.cpp  Text.h  main.cpp
game-elfi.cpp/: CMakeLists.txt  README.md  generations.cpp  neighbors.cpp  sex.cpp  world.cpp
game-elfi.cpp/src/: main.cpp
game-life/: CMakeLists.txt  README.md  main.cpp
not-completed/calculator/: README.md
not-completed/calculator/src/: ArithmeticProgression.cpp  ArithmeticProgression.h  BasedMath.h  CMakeLists.txt  Equations.h  Text.cpp  Text.h
not-completed/map-gen/: README.md  gen-field.cpp  gen-obj.cpp  main.cpp
not-completed/students/: README.md
not-completed/students/src/: main.cpp
not-completed/test/: CMakeList.txt  README.md
not-completed/todo-list/: CMakeLists.txt
not-completed/todo-list/src/: CMakeLists.txt  TodoListArray.cpp
test/src/: Sum.cpp  Sum.h  main.cpp
tets/src/: main.cpp
todo-list/: CMakeLists.txt  README.md
todo-list/src/: CMakeLists.txt  TodoListArray.cpp  TodoListArray.h  main.cpp
